# etl-service

./: .gitignore  README.md  pyproject.toml  start_etl.sh  test.json
src/: main.py
src/application/use_cases/: etl_process.py
src/domain/datatypes/: candidates.py
src/domain/interfaces/: candidate_repository.py  extract.py  rule.py
src/domain/models/: options.py  request_data.py
src/infrastructure/api/: api_controller.py  router.py
src/infrastructure/config/: database_config.py  file_config.py
src/infrastructure/extractors/: csv_extractor.py  extractor_factory.py
src/infrastructure/repositories/: candidate_db_repository.py
src/infrastructure/transformers/: strategy_factory.py
src/infrastructure/transformers/candidates/: strategy.py
src/infrastructure/transformers/candidates/rules/: TablaParametrica.py  __init__.py  candidatos_codigo_corporacion.py  corporacion_unipersonal.py  cuota_genero.py  digitos_faltantes.py  doble_militancia.py  documento_repetido.py  documento_sin_letras.py  eleccion_departamental.py  estado_lista.py  estructura_codigo_circunscripcion.py  estructura_codigo_corporacion.py  estructura_genero_candidato.py  estructura_numero_candidato.py  estructura_numero_identificacion.py  estructura_opcion_voto.py  estructura_orden_candidato.py  generos_permitidos.py  letra_partido.py  nombre_apellido.py  nombres_apellidos_mayuscula.py  retirados_apellido_a.py
