[project]
name = "etl-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Joan Morales",email = "josmoralesp0307@outlook.es"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]

[tool.poetry]
packages = [{ include = "*", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
